新規登録ページ

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
   <body>
     <h1>Top page</h1>
 
-    <div>新規投稿</div>
+    <a href="posts/new">新規投稿</a>
 
     <% posts.forEach((post)=> { %>
       <div class="post">
