--- a/views/new.ejs
+++ b/views/new.ejs
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>FirstApp</title>
+    <link href="/public/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
