--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
         </div>
 
         <div class="right-content">
-          <button>編集</button>
+          <a href="/posts/<%= post.id %>/edit">編集</a>
           <button>削除</button>
         </div>
         
