削除機能、ボタンの見栄えを統一

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,10 +11,14 @@
   color: gray;
 }
 
-
-.right-content{
-  display: flex;
-  align-items: center;
-
-  padding-right: 10px;
+.btn {
+  display: inline-block; /* ボックスモデルとして表示 */
+  margin: 5px; /* 余白 */
+  padding: 5px 10px; /* 内側の余白 */
+  text-decoration: none; /* アンダーラインを消去 */
+  color: white; /* 文字色 */
+  background-color: grey; /* 背景色 */
+  border: none; /* ボーダー無し */
+  cursor: pointer; /* カーソルをポインタに */
+  font-size: 16px;
 }
