--- a/views/allPosts.ejs
+++ b/views/allPosts.ejs
@@ -8,7 +8,7 @@
   <body>
     <h1>トップページ</h1>
 
-    <a href="posts/new">新規投稿</a>
+    <a href="/posts/create">新規投稿</a>
 
     <% posts.forEach((post)=> { %>
       <div class="post">
@@ -23,8 +23,8 @@
         </div>
 
         <div class="right-content">
-          <a href="/posts/<%= post.id %>/edit" class="btn">編集</a>
-          <form action="/posts/<%= post.id %>/delete" method="post" style="display: inline;">
+          <a href="/posts/update/<%= post.id %>" class="btn">編集</a>
+          <form action="/posts/delete/<%= post.id %>" method="post" style="display: inline;">
             <button type="submit" class="btn">削除</button>
           </form>
         </div>
