--- a/views/createGet.ejs
+++ b/views/createGet.ejs
@@ -6,10 +6,10 @@
   </head>
 
   <body>
-    <h1>編集ページ</h1>
+    <h1>新規投稿ページ</h1>
     
-    <form action="/posts/<%= post._id %>/update" method="post">
-      <input type="text" name="content" value="<%= post.content %>">
+    <form action="/posts/create" method="post">
+      <input type="text" name="content">
       <button type="submit">投稿する</button>
     </form>
 
