--- a/views/updateGet.ejs
+++ b/views/updateGet.ejs
@@ -6,10 +6,10 @@
   </head>
 
   <body>
-    <h1>新規投稿ページ</h1>
+    <h1>編集ページ</h1>
     
-    <form action="/posts" method="post">
-      <input type="text" name="content">
+    <form action="/posts/update/<%= post._id %>" method="post">
+      <input type="text" name="content" value="<%= post.content %>">
       <button type="submit">投稿する</button>
     </form>
 
