--- a/views/updateGet.ejs
+++ b/views/updateGet.ejs
@@ -8,7 +8,7 @@
   <body>
     <h1>編集ページ</h1>
     
-    <form action="/posts/update/<%= post._id %>" method="post">
+    <form action="/posts/update/<%= post.id %>" method="post">
       <input type="text" name="content" value="<%= post.content %>">
       <button type="submit">投稿する</button>
     </form>
